--- a/final_project/style.css
+++ b/final_project/style.css
@@ -6,6 +6,22 @@ body {
 	margin: 0;
 }
 
+article { 
+  display: block;
+  align-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+p {
+    margin: auto;
+    padding: 5px;
+	border: 1px solid #999;
+	display: inline-block;
+	width: 800px;
+}
+
+
 .container-width {
 	width: 90%;
 	max-width: 1150px;
